<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.android_ppe4_anais.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.android_ppe4_anais.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_TroisiemeFragment"
            app:destination="@id/TroisiemeFragment" />
    </fragment>

    <fragment
        android:id="@+id/TroisiemeFragment"
        android:name="com.example.android_ppe4_anais.TroisiemeFragment"
        android:label="@string/troisieme_fragment_label"
        tools:layout="@layout/fragment_troisieme">
        <action
            android:id="@+id/action_TroisiemeFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>